examples/test/testpolicy6757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6757
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key12: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value24
          key1: value4
          key23: value46
      podSelector:
        matchLabels:
          key13: value14
          key35: value30
